--- a/src/GSvar/ReportVariantDialog.ui
+++ b/src/GSvar/ReportVariantDialog.ui
@@ -33,12 +33,8 @@
    <property name="spacing">
     <number>3</number>
    </property>
-   <item row="16" column="1" colspan="3">
-    <widget class="QCheckBox" name="exclude_other">
-     <property name="text">
-      <string>other reason</string>
-     </property>
-    </widget>
+   <item row="2" column="1" colspan="3">
+    <widget class="QComboBox" name="type"/>
    </item>
    <item row="14" column="1" colspan="3">
     <widget class="QCheckBox" name="exclude_phenotype">
@@ -54,8 +50,12 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="3">
-    <widget class="QComboBox" name="type"/>
+   <item row="16" column="1" colspan="3">
+    <widget class="QCheckBox" name="exclude_other">
+     <property name="text">
+      <string>other reason</string>
+     </property>
+    </widget>
    </item>
    <item row="15" column="1" colspan="3">
     <widget class="QCheckBox" name="exclude_mechanism">
@@ -77,9 +77,6 @@
      </property>
     </widget>
    </item>
-   <item row="19" column="1" colspan="3">
-    <widget class="QPlainTextEdit" name="comments2"/>
-   </item>
    <item row="13" column="1" colspan="3">
     <widget class="QCheckBox" name="exclude_frequency">
      <property name="text">
@@ -87,12 +84,8 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="3">
-    <widget class="QCheckBox" name="causal">
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
+   <item row="19" column="1" colspan="3">
+    <widget class="QPlainTextEdit" name="comments2"/>
    </item>
    <item row="9" column="0">
     <widget class="QLabel" name="label_4">
@@ -130,8 +123,32 @@
      </property>
     </widget>
    </item>
-   <item row="18" column="1" colspan="3">
-    <widget class="QPlainTextEdit" name="comments"/>
+   <item row="4" column="1" colspan="3">
+    <widget class="QCheckBox" name="causal">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="18" column="0">
+    <widget class="QLabel" name="label_6">
+     <property name="toolTip">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comments of the first evaluation.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+     <property name="text">
+      <string>comments:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="1" colspan="3">
+    <widget class="QCheckBox" name="de_novo">
+     <property name="text">
+      <string>de-novo</string>
+     </property>
+    </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="label">
@@ -146,12 +163,8 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="1" colspan="3">
-    <widget class="QCheckBox" name="de_novo">
-     <property name="text">
-      <string>de-novo</string>
-     </property>
-    </widget>
+   <item row="18" column="1" colspan="3">
+    <widget class="QPlainTextEdit" name="comments"/>
    </item>
    <item row="7" column="3">
     <widget class="QLabel" name="inheritance_hint">
@@ -178,16 +191,35 @@
      </property>
     </widget>
    </item>
-   <item row="18" column="0">
-    <widget class="QLabel" name="label_6">
-     <property name="toolTip">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Comments of the first evaluation.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   <item row="0" column="0" colspan="4">
+    <widget class="QLabel" name="variant">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
      <property name="text">
-      <string>comments:</string>
+      <string>Variant representation</string>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+     </property>
+    </widget>
+   </item>
+   <item row="8" column="0">
+    <widget class="QLabel" name="label_3">
+     <property name="toolTip">
+      <string>The variant is de-novo.</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
      <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+     <property name="buddy">
+      <cstring>de_novo</cstring>
      </property>
     </widget>
    </item>
@@ -208,22 +240,6 @@
      </property>
     </widget>
    </item>
-   <item row="8" column="0">
-    <widget class="QLabel" name="label_3">
-     <property name="toolTip">
-      <string>The variant is de-novo.</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-     <property name="buddy">
-      <cstring>de_novo</cstring>
-     </property>
-    </widget>
-   </item>
    <item row="17" column="0" colspan="4">
     <widget class="Line" name="line_3">
      <property name="orientation">
@@ -231,19 +247,10 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="4">
-    <widget class="QLabel" name="variant">
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
+   <item row="5" column="0">
+    <widget class="QLabel" name="label_classification">
      <property name="text">
-      <string>Variant representation</string>
-     </property>
-     <property name="textInteractionFlags">
-      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+      <string>classifcation:</string>
      </property>
     </widget>
    </item>
@@ -254,10 +261,10 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="label_classification">
+   <item row="9" column="1" colspan="3">
+    <widget class="QCheckBox" name="mosaic">
      <property name="text">
-      <string>classifcation:</string>
+      <string>mosaic</string>
      </property>
     </widget>
    </item>
@@ -274,22 +281,8 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="1" colspan="3">
-    <widget class="QCheckBox" name="mosaic">
-     <property name="text">
-      <string>mosaic</string>
-     </property>
-    </widget>
-   </item>
    <item row="5" column="1" colspan="3">
     <widget class="QComboBox" name="classification"/>
-   </item>
-   <item row="11" column="0" colspan="4">
-    <widget class="Line" name="line_2">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
    </item>
    <item row="12" column="0" rowspan="5">
     <widget class="QLabel" name="label_7">
@@ -307,7 +300,7 @@
      </property>
     </widget>
    </item>
-   <item row="23" column="0" colspan="4">
+   <item row="27" column="0" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
       <number>3</number>
@@ -326,6 +319,31 @@
       </spacer>
      </item>
      <item>
+      <widget class="QLabel" name="error_label">
+       <property name="minimumSize">
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16</width>
+         <height>16</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="GSvar.qrc">:/Icons/Attention.png</pixmap>
+       </property>
+       <property name="scaledContents">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="btn_ok">
        <property name="text">
         <string>Ok</string>
@@ -341,18 +359,52 @@
      </item>
     </layout>
    </item>
-   <item row="21" column="0">
+   <item row="11" column="0" colspan="4">
+    <widget class="Line" name="line_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="25" column="0">
     <widget class="QLabel" name="label_10">
      <property name="text">
       <string>RNA information:</string>
      </property>
     </widget>
    </item>
-   <item row="21" column="1" colspan="3">
+   <item row="25" column="1" colspan="3">
     <widget class="QComboBox" name="rna_info"/>
    </item>
+   <item row="21" column="0">
+    <widget class="QLabel" name="manual_label_cnv_start">
+     <property name="text">
+      <string>manual start coordinate</string>
+     </property>
+    </widget>
+   </item>
+   <item row="24" column="0" colspan="4">
+    <widget class="Line" name="line_5">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="22" column="0">
+    <widget class="QLabel" name="manual_label_cnv_end">
+     <property name="text">
+      <string>manual end coordinate</string>
+     </property>
+    </widget>
+   </item>
+   <item row="22" column="1" colspan="3">
+    <widget class="QLineEdit" name="manual_cnv_end"/>
+   </item>
+   <item row="21" column="1" colspan="3">
+    <widget class="QLineEdit" name="manual_cnv_start"/>
+   </item>
    <item row="20" column="0" colspan="4">
-    <widget class="Line" name="line_4">
+    <widget class="Line" name="manual_line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
