--- a/src/GSvar/ReportVariantDialog.ui
+++ b/src/GSvar/ReportVariantDialog.ui
@@ -321,7 +321,7 @@
    <item row="5" column="1" colspan="3">
     <widget class="QComboBox" name="classification"/>
    </item>
-   <item row="28" column="0" colspan="4">
+   <item row="30" column="0" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
       <number>3</number>
@@ -387,14 +387,14 @@
      </property>
     </widget>
    </item>
-   <item row="26" column="0">
+   <item row="28" column="0">
     <widget class="QLabel" name="label_10">
      <property name="text">
       <string>RNA information:</string>
      </property>
     </widget>
    </item>
-   <item row="26" column="1" colspan="3">
+   <item row="28" column="1" colspan="3">
     <widget class="QComboBox" name="rna_info"/>
    </item>
    <item row="21" column="0">
@@ -404,7 +404,7 @@
      </property>
     </widget>
    </item>
-   <item row="25" column="0" colspan="4">
+   <item row="27" column="0" colspan="4">
     <widget class="Line" name="line_5">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -418,28 +418,28 @@
      </property>
     </widget>
    </item>
-   <item row="23" column="0" colspan="4">
+   <item row="24" column="0" colspan="4">
     <widget class="Line" name="manual_line_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="24" column="0">
+   <item row="25" column="0">
     <widget class="QLabel" name="manual_label_small_var">
      <property name="text">
       <string>manual variant</string>
      </property>
     </widget>
    </item>
-   <item row="24" column="1">
+   <item row="25" column="1">
     <widget class="QLineEdit" name="manual_small_var">
      <property name="placeholderText">
       <string>variant in GSvar format</string>
      </property>
     </widget>
    </item>
-   <item row="24" column="3">
+   <item row="25" column="3">
     <widget class="QToolButton" name="manual_small_var_import">
      <property name="toolTip">
       <string>Create variant using other formats.</string>
@@ -450,6 +450,34 @@
      <property name="icon">
       <iconset resource="GSvar.qrc">
        <normaloff>:/Icons/Import.png</normaloff>:/Icons/Import.png</iconset>
+     </property>
+    </widget>
+   </item>
+   <item row="23" column="0">
+    <widget class="QLabel" name="manual_label_cnv_cn">
+     <property name="text">
+      <string>manual copy-number</string>
+     </property>
+    </widget>
+   </item>
+   <item row="26" column="0">
+    <widget class="QLabel" name="manual_label_small_genotype">
+     <property name="text">
+      <string>manual genotype</string>
+     </property>
+    </widget>
+   </item>
+   <item row="23" column="1" colspan="3">
+    <widget class="QLineEdit" name="manual_cnv_cn">
+     <property name="placeholderText">
+      <string>copy-number (0, 1, ...)</string>
+     </property>
+    </widget>
+   </item>
+   <item row="26" column="1" colspan="3">
+    <widget class="QLineEdit" name="manual_small_genotype">
+     <property name="placeholderText">
+      <string>genotype 'het' or 'hom'</string>
      </property>
     </widget>
    </item>
