--- a/src/GSvar/BurdenTestWidget.ui
+++ b/src/GSvar/BurdenTestWidget.ui
@@ -29,7 +29,7 @@
    <property name="spacing">
     <number>1</number>
    </property>
-   <item row="4" column="1" colspan="2">
+   <item row="5" column="1" colspan="2">
     <layout class="QHBoxLayout" name="horizontalLayout_7">
      <property name="spacing">
       <number>3</number>
@@ -110,50 +110,6 @@
       <property name="spacing">
        <number>3</number>
       </property>
-      <item row="10" column="1">
-       <widget class="QLabel" name="label_6">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>inheritance:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="1">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>impact:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="8" column="3">
-       <layout class="QHBoxLayout" name="horizontalLayout_10">
-        <item>
-         <widget class="QCheckBox" name="cb_predict_patogenic">
-          <property name="text">
-           <string>add variants with moderate/low/modifier impact only if CADD≥20 or SpliceAI≥0.5</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-       </layout>
-      </item>
       <item row="4" column="3">
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
@@ -193,6 +149,19 @@
         </item>
        </layout>
       </item>
+      <item row="11" column="3">
+       <widget class="QCheckBox" name="cb_include_cnvs">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="toolTip">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;filter criteria:&lt;/p&gt;&lt;p&gt;callset reference correlation &amp;ge; 0.9 (WES) / &amp;ge;0.55 (WGS)&lt;/p&gt;&lt;p&gt;scaled log-liklihood &amp;ge; 15&lt;/p&gt;&lt;p&gt;polymorphism region overlap &amp;lt; 0.95&lt;/p&gt;&lt;p&gt;copy-number = 0&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+        <property name="text">
+         <string>include CNVs</string>
+        </property>
+       </widget>
+      </item>
       <item row="5" column="3">
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
@@ -226,64 +195,6 @@
         </item>
         <item>
          <spacer name="horizontalSpacer_8">
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>40</width>
-            <height>20</height>
-           </size>
-          </property>
-         </spacer>
-        </item>
-       </layout>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>max. frequency: </string>
-        </property>
-       </widget>
-      </item>
-      <item row="7" column="3">
-       <layout class="QHBoxLayout" name="horizontalLayout_4">
-        <item>
-         <widget class="QCheckBox" name="cb_high">
-          <property name="text">
-           <string>high</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="cb_medium">
-          <property name="text">
-           <string>medium</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="cb_low">
-          <property name="text">
-           <string>low</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QCheckBox" name="cb_modifier">
-          <property name="text">
-           <string>modifier</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <spacer name="horizontalSpacer_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -340,7 +251,109 @@
         </property>
        </widget>
       </item>
-      <item row="11" column="1">
+      <item row="10" column="1">
+       <widget class="QLabel" name="label_6">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="text">
+         <string>inheritance:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="3">
+       <layout class="QHBoxLayout" name="horizontalLayout_10">
+        <item>
+         <widget class="QCheckBox" name="cb_predict_patogenic">
+          <property name="text">
+           <string>add variants with moderate/low/modifier impact only if CADD≥20 or SpliceAI≥0.5</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>max. frequency: </string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="1">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>impact:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="3">
+       <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <item>
+         <widget class="QCheckBox" name="cb_high">
+          <property name="text">
+           <string>high</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="cb_medium">
+          <property name="text">
+           <string>medium</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="cb_low">
+          <property name="text">
+           <string>low</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QCheckBox" name="cb_modifier">
+          <property name="text">
+           <string>modifier</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
+      </item>
+      <item row="12" column="3">
        <spacer name="verticalSpacer_4">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -359,7 +372,7 @@
      </layout>
     </widget>
    </item>
-   <item row="5" column="1" colspan="2">
+   <item row="6" column="1" colspan="2">
     <widget class="QGroupBox" name="groupBox_3">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
